syntax = "proto3";
import "commontype/QoS.proto";
import "commontype/TopicMessage.proto";
import "distservice/TopicFanout.proto";

option java_multiple_files = true;
option java_package = "com.baidu.bifromq.dist.rpc.proto";
option java_outer_classname = "DistCoProcProtos";

package distservice;

message BatchSubRequest {
  uint64 reqId = 1;
  map<string, commontype.QoS> scopedTopicFilter = 2; // key: tenantId_qInboxId_utf8_topicFilter(scopedTopicFilter)
}

message BatchSubReply {
  enum Result{
    OK = 0;
    EXCEED_LIMIT = 1; // only for group join
    ERROR = 2;
  }
  uint64 reqId = 1;
  map<string, Result>  results = 2; // key: tenantId_qInboxId_utf8_topicFilter(scopedTopicFilter)
}

message BatchUnsubRequest {
  uint64 reqId = 1;
  repeated string scopedTopicFilter = 2; // key: tenantId_qInboxId_utf8_topicFilter(scopedTopicFilter)
}

message BatchUnsubReply {
  enum Result{
    OK = 0;
    NOT_EXISTED = 1;
    ERROR = 2;
  }
  uint64 reqId = 1;
  map<string, Result>  results = 2; // key: tenantId_qInboxId_utf8_topicFilter(scopedTopicFilter)
}

message GroupMatchRecord {
  map<string, commontype.QoS> entry = 1; // qualified inboxId to NormalMatchRecord
}

message MatchRecord {
  oneof Record{
    commontype.QoS normal = 1;
    GroupMatchRecord group = 2;
  }
}

message DistPack{
  string tenantId = 1;
  repeated commontype.TopicMessagePack msgPack = 2; // topic messages packs shares same tenantId
}

message BatchDist {
  uint64 reqId = 1;
  repeated DistPack distPack = 2; // sorted by tenantId and topic
  string orderKey = 3;
}

message BatchDistReply {
  uint64 reqId = 1;
  map<string, TopicFanout> result = 2;
}

message CollectMetricsRequest{
  uint64 reqId = 1;
}

message CollectMetricsReply{
  uint64 reqId = 1;
  map<string, uint64> usedSpaces = 2;
}

message DistServiceRWCoProcInput{
  oneof type{
    BatchSubRequest batchSub = 1;
    BatchUnsubRequest batchUnsub = 2;
  }
}

message DistServiceRWCoProcOutput{
  oneof type{
    BatchSubReply batchSub = 1;
    BatchUnsubReply batchUnsub = 2;
  }
}

message DistServiceROCoProcInput{
  oneof Input{
    BatchDist dist = 1;
    CollectMetricsRequest collectMetricsRequest = 2;
  }
}

message DistServiceROCoProcOutput{
  oneof Output{
    BatchDistReply distReply = 1;
    CollectMetricsReply collectMetricsReply = 2;
  }
}


